--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: 2023 Alessandro Pellegrini <alessandro.pellegrini87@gmail.com>
+# SPDX-License-Identifier: CC0-1.0
 ### IntelliJ IDEA ###
 out/
 !**/src/main/**/out/
@@ -27,3 +29,6 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+.idea
+*.iml
